parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> statement-list
Rule 2     statement-list -> LBRACE statement-list RBRACE
Rule 3     statement-list -> statement statement-list
Rule 4     statement-list -> empty
Rule 5     statement -> expression SEMICOLON
Rule 6     statement -> var_assign SEMICOLON
Rule 7     expression -> PRINT LPAREN expression RPAREN
Rule 8     var_assign -> expression ASSIGN expression
Rule 9     expression -> INDEXTUPES expression LPAREN tuple RPAREN
Rule 10    expression -> LPAREN tuple RPAREN
Rule 11    tuple -> expression COMMA tuple
Rule 12    tuple -> empty
Rule 13    expression -> expression LBRACKET expression RBRACKET
Rule 14    expression -> LBRACKET list RBRACKET
Rule 15    list -> expression list_tail
Rule 16    list -> empty
Rule 17    list_tail -> COMMA expression list_tail
Rule 18    list_tail -> empty
Rule 19    empty -> <empty>
Rule 20    expression -> INT_VAL
Rule 21    expression -> REAL_VAL
Rule 22    expression -> STRING
Rule 23    expression -> BOOLEAN
Rule 24    expression -> NAME
Rule 25    expression -> expression ADDITION expression
Rule 26    expression -> expression SUBTRACTION expression
Rule 27    expression -> SUBTRACTION expression
Rule 28    expression -> expression MULTIPLICATION expression
Rule 29    expression -> expression DIVISION expression
Rule 30    expression -> expression EXPONENTIATION expression
Rule 31    expression -> expression MODULUS expression
Rule 32    expression -> expression INTDIVISION expression
Rule 33    expression -> expression MEMBER expression
Rule 34    expression -> expression CONS expression
Rule 35    expression -> expression CONJUNCTION expression
Rule 36    expression -> expression DISJUNCTION expression
Rule 37    expression -> expression EQUAL expression
Rule 38    expression -> expression NEQUAL expression
Rule 39    expression -> expression GTE expression
Rule 40    expression -> expression GT expression
Rule 41    expression -> expression LTE expression
Rule 42    expression -> expression LT expression
Rule 43    expression -> NEGATION expression
Rule 44    expression -> LPAREN expression RPAREN

Terminals, with rules where they appear

ADDITION             : 25
ASSIGN               : 8
BOOLEAN              : 23
COMMA                : 11 17
CONJUNCTION          : 35
CONS                 : 34
DISJUNCTION          : 36
DIVISION             : 29
EQUAL                : 37
EXPONENTIATION       : 30
GT                   : 40
GTE                  : 39
INDEXTUPES           : 9
INTDIVISION          : 32
INT_VAL              : 20
LBRACE               : 2
LBRACKET             : 13 14
LPAREN               : 7 9 10 44
LT                   : 42
LTE                  : 41
MEMBER               : 33
MODULUS              : 31
MULTIPLICATION       : 28
NAME                 : 24
NEGATION             : 43
NEQUAL               : 38
PRINT                : 7
RBRACE               : 2
RBRACKET             : 13 14
REAL_VAL             : 21
RPAREN               : 7 9 10 44
SEMICOLON            : 5 6
STRING               : 22
SUBTRACTION          : 26 27
error                : 

Nonterminals, with rules where they appear

empty                : 4 12 16 18
expression           : 5 7 8 8 9 11 13 13 15 17 25 25 26 26 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 44
list                 : 14
list_tail            : 15 17
start                : 0
statement            : 3
statement-list       : 1 2 3
tuple                : 9 10 11
var_assign           : 6

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . statement-list
    (2) statement-list -> . LBRACE statement-list RBRACE
    (3) statement-list -> . statement statement-list
    (4) statement-list -> . empty
    (5) statement -> . expression SEMICOLON
    (6) statement -> . var_assign SEMICOLON
    (19) empty -> .
    (7) expression -> . PRINT LPAREN expression RPAREN
    (9) expression -> . INDEXTUPES expression LPAREN tuple RPAREN
    (10) expression -> . LPAREN tuple RPAREN
    (13) expression -> . expression LBRACKET expression RBRACKET
    (14) expression -> . LBRACKET list RBRACKET
    (20) expression -> . INT_VAL
    (21) expression -> . REAL_VAL
    (22) expression -> . STRING
    (23) expression -> . BOOLEAN
    (24) expression -> . NAME
    (25) expression -> . expression ADDITION expression
    (26) expression -> . expression SUBTRACTION expression
    (27) expression -> . SUBTRACTION expression
    (28) expression -> . expression MULTIPLICATION expression
    (29) expression -> . expression DIVISION expression
    (30) expression -> . expression EXPONENTIATION expression
    (31) expression -> . expression MODULUS expression
    (32) expression -> . expression INTDIVISION expression
    (33) expression -> . expression MEMBER expression
    (34) expression -> . expression CONS expression
    (35) expression -> . expression CONJUNCTION expression
    (36) expression -> . expression DISJUNCTION expression
    (37) expression -> . expression EQUAL expression
    (38) expression -> . expression NEQUAL expression
    (39) expression -> . expression GTE expression
    (40) expression -> . expression GT expression
    (41) expression -> . expression LTE expression
    (42) expression -> . expression LT expression
    (43) expression -> . NEGATION expression
    (44) expression -> . LPAREN expression RPAREN
    (8) var_assign -> . expression ASSIGN expression

    LBRACE          shift and go to state 3
    $end            reduce using rule 19 (empty -> .)
    PRINT           shift and go to state 8
    INDEXTUPES      shift and go to state 10
    LPAREN          shift and go to state 9
    LBRACKET        shift and go to state 11
    INT_VAL         shift and go to state 12
    REAL_VAL        shift and go to state 13
    STRING          shift and go to state 14
    BOOLEAN         shift and go to state 15
    NAME            shift and go to state 16
    SUBTRACTION     shift and go to state 17
    NEGATION        shift and go to state 18

    start                          shift and go to state 1
    statement-list                 shift and go to state 2
    statement                      shift and go to state 4
    empty                          shift and go to state 5
    expression                     shift and go to state 6
    var_assign                     shift and go to state 7

state 1

    (0) S' -> start .



state 2

    (1) start -> statement-list .

    $end            reduce using rule 1 (start -> statement-list .)


state 3

    (2) statement-list -> LBRACE . statement-list RBRACE
    (2) statement-list -> . LBRACE statement-list RBRACE
    (3) statement-list -> . statement statement-list
    (4) statement-list -> . empty
    (5) statement -> . expression SEMICOLON
    (6) statement -> . var_assign SEMICOLON
    (19) empty -> .
    (7) expression -> . PRINT LPAREN expression RPAREN
    (9) expression -> . INDEXTUPES expression LPAREN tuple RPAREN
    (10) expression -> . LPAREN tuple RPAREN
    (13) expression -> . expression LBRACKET expression RBRACKET
    (14) expression -> . LBRACKET list RBRACKET
    (20) expression -> . INT_VAL
    (21) expression -> . REAL_VAL
    (22) expression -> . STRING
    (23) expression -> . BOOLEAN
    (24) expression -> . NAME
    (25) expression -> . expression ADDITION expression
    (26) expression -> . expression SUBTRACTION expression
    (27) expression -> . SUBTRACTION expression
    (28) expression -> . expression MULTIPLICATION expression
    (29) expression -> . expression DIVISION expression
    (30) expression -> . expression EXPONENTIATION expression
    (31) expression -> . expression MODULUS expression
    (32) expression -> . expression INTDIVISION expression
    (33) expression -> . expression MEMBER expression
    (34) expression -> . expression CONS expression
    (35) expression -> . expression CONJUNCTION expression
    (36) expression -> . expression DISJUNCTION expression
    (37) expression -> . expression EQUAL expression
    (38) expression -> . expression NEQUAL expression
    (39) expression -> . expression GTE expression
    (40) expression -> . expression GT expression
    (41) expression -> . expression LTE expression
    (42) expression -> . expression LT expression
    (43) expression -> . NEGATION expression
    (44) expression -> . LPAREN expression RPAREN
    (8) var_assign -> . expression ASSIGN expression

    LBRACE          shift and go to state 3
    RBRACE          reduce using rule 19 (empty -> .)
    PRINT           shift and go to state 8
    INDEXTUPES      shift and go to state 10
    LPAREN          shift and go to state 9
    LBRACKET        shift and go to state 11
    INT_VAL         shift and go to state 12
    REAL_VAL        shift and go to state 13
    STRING          shift and go to state 14
    BOOLEAN         shift and go to state 15
    NAME            shift and go to state 16
    SUBTRACTION     shift and go to state 17
    NEGATION        shift and go to state 18

    statement-list                 shift and go to state 19
    statement                      shift and go to state 4
    empty                          shift and go to state 5
    expression                     shift and go to state 6
    var_assign                     shift and go to state 7

state 4

    (3) statement-list -> statement . statement-list
    (2) statement-list -> . LBRACE statement-list RBRACE
    (3) statement-list -> . statement statement-list
    (4) statement-list -> . empty
    (5) statement -> . expression SEMICOLON
    (6) statement -> . var_assign SEMICOLON
    (19) empty -> .
    (7) expression -> . PRINT LPAREN expression RPAREN
    (9) expression -> . INDEXTUPES expression LPAREN tuple RPAREN
    (10) expression -> . LPAREN tuple RPAREN
    (13) expression -> . expression LBRACKET expression RBRACKET
    (14) expression -> . LBRACKET list RBRACKET
    (20) expression -> . INT_VAL
    (21) expression -> . REAL_VAL
    (22) expression -> . STRING
    (23) expression -> . BOOLEAN
    (24) expression -> . NAME
    (25) expression -> . expression ADDITION expression
    (26) expression -> . expression SUBTRACTION expression
    (27) expression -> . SUBTRACTION expression
    (28) expression -> . expression MULTIPLICATION expression
    (29) expression -> . expression DIVISION expression
    (30) expression -> . expression EXPONENTIATION expression
    (31) expression -> . expression MODULUS expression
    (32) expression -> . expression INTDIVISION expression
    (33) expression -> . expression MEMBER expression
    (34) expression -> . expression CONS expression
    (35) expression -> . expression CONJUNCTION expression
    (36) expression -> . expression DISJUNCTION expression
    (37) expression -> . expression EQUAL expression
    (38) expression -> . expression NEQUAL expression
    (39) expression -> . expression GTE expression
    (40) expression -> . expression GT expression
    (41) expression -> . expression LTE expression
    (42) expression -> . expression LT expression
    (43) expression -> . NEGATION expression
    (44) expression -> . LPAREN expression RPAREN
    (8) var_assign -> . expression ASSIGN expression

    LBRACE          shift and go to state 3
    $end            reduce using rule 19 (empty -> .)
    RBRACE          reduce using rule 19 (empty -> .)
    PRINT           shift and go to state 8
    INDEXTUPES      shift and go to state 10
    LPAREN          shift and go to state 9
    LBRACKET        shift and go to state 11
    INT_VAL         shift and go to state 12
    REAL_VAL        shift and go to state 13
    STRING          shift and go to state 14
    BOOLEAN         shift and go to state 15
    NAME            shift and go to state 16
    SUBTRACTION     shift and go to state 17
    NEGATION        shift and go to state 18

    statement                      shift and go to state 4
    statement-list                 shift and go to state 20
    empty                          shift and go to state 5
    expression                     shift and go to state 6
    var_assign                     shift and go to state 7

state 5

    (4) statement-list -> empty .

    $end            reduce using rule 4 (statement-list -> empty .)
    RBRACE          reduce using rule 4 (statement-list -> empty .)


state 6

    (5) statement -> expression . SEMICOLON
    (13) expression -> expression . LBRACKET expression RBRACKET
    (25) expression -> expression . ADDITION expression
    (26) expression -> expression . SUBTRACTION expression
    (28) expression -> expression . MULTIPLICATION expression
    (29) expression -> expression . DIVISION expression
    (30) expression -> expression . EXPONENTIATION expression
    (31) expression -> expression . MODULUS expression
    (32) expression -> expression . INTDIVISION expression
    (33) expression -> expression . MEMBER expression
    (34) expression -> expression . CONS expression
    (35) expression -> expression . CONJUNCTION expression
    (36) expression -> expression . DISJUNCTION expression
    (37) expression -> expression . EQUAL expression
    (38) expression -> expression . NEQUAL expression
    (39) expression -> expression . GTE expression
    (40) expression -> expression . GT expression
    (41) expression -> expression . LTE expression
    (42) expression -> expression . LT expression
    (8) var_assign -> expression . ASSIGN expression

    SEMICOLON       shift and go to state 21
    LBRACKET        shift and go to state 22
    ADDITION        shift and go to state 23
    SUBTRACTION     shift and go to state 24
    MULTIPLICATION  shift and go to state 25
    DIVISION        shift and go to state 26
    EXPONENTIATION  shift and go to state 27
    MODULUS         shift and go to state 28
    INTDIVISION     shift and go to state 29
    MEMBER          shift and go to state 30
    CONS            shift and go to state 31
    CONJUNCTION     shift and go to state 32
    DISJUNCTION     shift and go to state 33
    EQUAL           shift and go to state 34
    NEQUAL          shift and go to state 35
    GTE             shift and go to state 36
    GT              shift and go to state 37
    LTE             shift and go to state 38
    LT              shift and go to state 39
    ASSIGN          shift and go to state 40


state 7

    (6) statement -> var_assign . SEMICOLON

    SEMICOLON       shift and go to state 41


state 8

    (7) expression -> PRINT . LPAREN expression RPAREN

    LPAREN          shift and go to state 42


state 9

    (10) expression -> LPAREN . tuple RPAREN
    (44) expression -> LPAREN . expression RPAREN
    (11) tuple -> . expression COMMA tuple
    (12) tuple -> . empty
    (7) expression -> . PRINT LPAREN expression RPAREN
    (9) expression -> . INDEXTUPES expression LPAREN tuple RPAREN
    (10) expression -> . LPAREN tuple RPAREN
    (13) expression -> . expression LBRACKET expression RBRACKET
    (14) expression -> . LBRACKET list RBRACKET
    (20) expression -> . INT_VAL
    (21) expression -> . REAL_VAL
    (22) expression -> . STRING
    (23) expression -> . BOOLEAN
    (24) expression -> . NAME
    (25) expression -> . expression ADDITION expression
    (26) expression -> . expression SUBTRACTION expression
    (27) expression -> . SUBTRACTION expression
    (28) expression -> . expression MULTIPLICATION expression
    (29) expression -> . expression DIVISION expression
    (30) expression -> . expression EXPONENTIATION expression
    (31) expression -> . expression MODULUS expression
    (32) expression -> . expression INTDIVISION expression
    (33) expression -> . expression MEMBER expression
    (34) expression -> . expression CONS expression
    (35) expression -> . expression CONJUNCTION expression
    (36) expression -> . expression DISJUNCTION expression
    (37) expression -> . expression EQUAL expression
    (38) expression -> . expression NEQUAL expression
    (39) expression -> . expression GTE expression
    (40) expression -> . expression GT expression
    (41) expression -> . expression LTE expression
    (42) expression -> . expression LT expression
    (43) expression -> . NEGATION expression
    (44) expression -> . LPAREN expression RPAREN
    (19) empty -> .

    PRINT           shift and go to state 8
    INDEXTUPES      shift and go to state 10
    LPAREN          shift and go to state 9
    LBRACKET        shift and go to state 11
    INT_VAL         shift and go to state 12
    REAL_VAL        shift and go to state 13
    STRING          shift and go to state 14
    BOOLEAN         shift and go to state 15
    NAME            shift and go to state 16
    SUBTRACTION     shift and go to state 17
    NEGATION        shift and go to state 18
    RPAREN          reduce using rule 19 (empty -> .)

    tuple                          shift and go to state 43
    expression                     shift and go to state 44
    empty                          shift and go to state 45

state 10

    (9) expression -> INDEXTUPES . expression LPAREN tuple RPAREN
    (7) expression -> . PRINT LPAREN expression RPAREN
    (9) expression -> . INDEXTUPES expression LPAREN tuple RPAREN
    (10) expression -> . LPAREN tuple RPAREN
    (13) expression -> . expression LBRACKET expression RBRACKET
    (14) expression -> . LBRACKET list RBRACKET
    (20) expression -> . INT_VAL
    (21) expression -> . REAL_VAL
    (22) expression -> . STRING
    (23) expression -> . BOOLEAN
    (24) expression -> . NAME
    (25) expression -> . expression ADDITION expression
    (26) expression -> . expression SUBTRACTION expression
    (27) expression -> . SUBTRACTION expression
    (28) expression -> . expression MULTIPLICATION expression
    (29) expression -> . expression DIVISION expression
    (30) expression -> . expression EXPONENTIATION expression
    (31) expression -> . expression MODULUS expression
    (32) expression -> . expression INTDIVISION expression
    (33) expression -> . expression MEMBER expression
    (34) expression -> . expression CONS expression
    (35) expression -> . expression CONJUNCTION expression
    (36) expression -> . expression DISJUNCTION expression
    (37) expression -> . expression EQUAL expression
    (38) expression -> . expression NEQUAL expression
    (39) expression -> . expression GTE expression
    (40) expression -> . expression GT expression
    (41) expression -> . expression LTE expression
    (42) expression -> . expression LT expression
    (43) expression -> . NEGATION expression
    (44) expression -> . LPAREN expression RPAREN

    PRINT           shift and go to state 8
    INDEXTUPES      shift and go to state 10
    LPAREN          shift and go to state 9
    LBRACKET        shift and go to state 11
    INT_VAL         shift and go to state 12
    REAL_VAL        shift and go to state 13
    STRING          shift and go to state 14
    BOOLEAN         shift and go to state 15
    NAME            shift and go to state 16
    SUBTRACTION     shift and go to state 17
    NEGATION        shift and go to state 18

    expression                     shift and go to state 46

state 11

    (14) expression -> LBRACKET . list RBRACKET
    (15) list -> . expression list_tail
    (16) list -> . empty
    (7) expression -> . PRINT LPAREN expression RPAREN
    (9) expression -> . INDEXTUPES expression LPAREN tuple RPAREN
    (10) expression -> . LPAREN tuple RPAREN
    (13) expression -> . expression LBRACKET expression RBRACKET
    (14) expression -> . LBRACKET list RBRACKET
    (20) expression -> . INT_VAL
    (21) expression -> . REAL_VAL
    (22) expression -> . STRING
    (23) expression -> . BOOLEAN
    (24) expression -> . NAME
    (25) expression -> . expression ADDITION expression
    (26) expression -> . expression SUBTRACTION expression
    (27) expression -> . SUBTRACTION expression
    (28) expression -> . expression MULTIPLICATION expression
    (29) expression -> . expression DIVISION expression
    (30) expression -> . expression EXPONENTIATION expression
    (31) expression -> . expression MODULUS expression
    (32) expression -> . expression INTDIVISION expression
    (33) expression -> . expression MEMBER expression
    (34) expression -> . expression CONS expression
    (35) expression -> . expression CONJUNCTION expression
    (36) expression -> . expression DISJUNCTION expression
    (37) expression -> . expression EQUAL expression
    (38) expression -> . expression NEQUAL expression
    (39) expression -> . expression GTE expression
    (40) expression -> . expression GT expression
    (41) expression -> . expression LTE expression
    (42) expression -> . expression LT expression
    (43) expression -> . NEGATION expression
    (44) expression -> . LPAREN expression RPAREN
    (19) empty -> .

    PRINT           shift and go to state 8
    INDEXTUPES      shift and go to state 10
    LPAREN          shift and go to state 9
    LBRACKET        shift and go to state 11
    INT_VAL         shift and go to state 12
    REAL_VAL        shift and go to state 13
    STRING          shift and go to state 14
    BOOLEAN         shift and go to state 15
    NAME            shift and go to state 16
    SUBTRACTION     shift and go to state 17
    NEGATION        shift and go to state 18
    RBRACKET        reduce using rule 19 (empty -> .)

    list                           shift and go to state 47
    expression                     shift and go to state 48
    empty                          shift and go to state 49

state 12

    (20) expression -> INT_VAL .

    SEMICOLON       reduce using rule 20 (expression -> INT_VAL .)
    LBRACKET        reduce using rule 20 (expression -> INT_VAL .)
    ADDITION        reduce using rule 20 (expression -> INT_VAL .)
    SUBTRACTION     reduce using rule 20 (expression -> INT_VAL .)
    MULTIPLICATION  reduce using rule 20 (expression -> INT_VAL .)
    DIVISION        reduce using rule 20 (expression -> INT_VAL .)
    EXPONENTIATION  reduce using rule 20 (expression -> INT_VAL .)
    MODULUS         reduce using rule 20 (expression -> INT_VAL .)
    INTDIVISION     reduce using rule 20 (expression -> INT_VAL .)
    MEMBER          reduce using rule 20 (expression -> INT_VAL .)
    CONS            reduce using rule 20 (expression -> INT_VAL .)
    CONJUNCTION     reduce using rule 20 (expression -> INT_VAL .)
    DISJUNCTION     reduce using rule 20 (expression -> INT_VAL .)
    EQUAL           reduce using rule 20 (expression -> INT_VAL .)
    NEQUAL          reduce using rule 20 (expression -> INT_VAL .)
    GTE             reduce using rule 20 (expression -> INT_VAL .)
    GT              reduce using rule 20 (expression -> INT_VAL .)
    LTE             reduce using rule 20 (expression -> INT_VAL .)
    LT              reduce using rule 20 (expression -> INT_VAL .)
    ASSIGN          reduce using rule 20 (expression -> INT_VAL .)
    RPAREN          reduce using rule 20 (expression -> INT_VAL .)
    COMMA           reduce using rule 20 (expression -> INT_VAL .)
    LPAREN          reduce using rule 20 (expression -> INT_VAL .)
    RBRACKET        reduce using rule 20 (expression -> INT_VAL .)


state 13

    (21) expression -> REAL_VAL .

    SEMICOLON       reduce using rule 21 (expression -> REAL_VAL .)
    LBRACKET        reduce using rule 21 (expression -> REAL_VAL .)
    ADDITION        reduce using rule 21 (expression -> REAL_VAL .)
    SUBTRACTION     reduce using rule 21 (expression -> REAL_VAL .)
    MULTIPLICATION  reduce using rule 21 (expression -> REAL_VAL .)
    DIVISION        reduce using rule 21 (expression -> REAL_VAL .)
    EXPONENTIATION  reduce using rule 21 (expression -> REAL_VAL .)
    MODULUS         reduce using rule 21 (expression -> REAL_VAL .)
    INTDIVISION     reduce using rule 21 (expression -> REAL_VAL .)
    MEMBER          reduce using rule 21 (expression -> REAL_VAL .)
    CONS            reduce using rule 21 (expression -> REAL_VAL .)
    CONJUNCTION     reduce using rule 21 (expression -> REAL_VAL .)
    DISJUNCTION     reduce using rule 21 (expression -> REAL_VAL .)
    EQUAL           reduce using rule 21 (expression -> REAL_VAL .)
    NEQUAL          reduce using rule 21 (expression -> REAL_VAL .)
    GTE             reduce using rule 21 (expression -> REAL_VAL .)
    GT              reduce using rule 21 (expression -> REAL_VAL .)
    LTE             reduce using rule 21 (expression -> REAL_VAL .)
    LT              reduce using rule 21 (expression -> REAL_VAL .)
    ASSIGN          reduce using rule 21 (expression -> REAL_VAL .)
    RPAREN          reduce using rule 21 (expression -> REAL_VAL .)
    COMMA           reduce using rule 21 (expression -> REAL_VAL .)
    LPAREN          reduce using rule 21 (expression -> REAL_VAL .)
    RBRACKET        reduce using rule 21 (expression -> REAL_VAL .)


state 14

    (22) expression -> STRING .

    SEMICOLON       reduce using rule 22 (expression -> STRING .)
    LBRACKET        reduce using rule 22 (expression -> STRING .)
    ADDITION        reduce using rule 22 (expression -> STRING .)
    SUBTRACTION     reduce using rule 22 (expression -> STRING .)
    MULTIPLICATION  reduce using rule 22 (expression -> STRING .)
    DIVISION        reduce using rule 22 (expression -> STRING .)
    EXPONENTIATION  reduce using rule 22 (expression -> STRING .)
    MODULUS         reduce using rule 22 (expression -> STRING .)
    INTDIVISION     reduce using rule 22 (expression -> STRING .)
    MEMBER          reduce using rule 22 (expression -> STRING .)
    CONS            reduce using rule 22 (expression -> STRING .)
    CONJUNCTION     reduce using rule 22 (expression -> STRING .)
    DISJUNCTION     reduce using rule 22 (expression -> STRING .)
    EQUAL           reduce using rule 22 (expression -> STRING .)
    NEQUAL          reduce using rule 22 (expression -> STRING .)
    GTE             reduce using rule 22 (expression -> STRING .)
    GT              reduce using rule 22 (expression -> STRING .)
    LTE             reduce using rule 22 (expression -> STRING .)
    LT              reduce using rule 22 (expression -> STRING .)
    ASSIGN          reduce using rule 22 (expression -> STRING .)
    RPAREN          reduce using rule 22 (expression -> STRING .)
    COMMA           reduce using rule 22 (expression -> STRING .)
    LPAREN          reduce using rule 22 (expression -> STRING .)
    RBRACKET        reduce using rule 22 (expression -> STRING .)


state 15

    (23) expression -> BOOLEAN .

    SEMICOLON       reduce using rule 23 (expression -> BOOLEAN .)
    LBRACKET        reduce using rule 23 (expression -> BOOLEAN .)
    ADDITION        reduce using rule 23 (expression -> BOOLEAN .)
    SUBTRACTION     reduce using rule 23 (expression -> BOOLEAN .)
    MULTIPLICATION  reduce using rule 23 (expression -> BOOLEAN .)
    DIVISION        reduce using rule 23 (expression -> BOOLEAN .)
    EXPONENTIATION  reduce using rule 23 (expression -> BOOLEAN .)
    MODULUS         reduce using rule 23 (expression -> BOOLEAN .)
    INTDIVISION     reduce using rule 23 (expression -> BOOLEAN .)
    MEMBER          reduce using rule 23 (expression -> BOOLEAN .)
    CONS            reduce using rule 23 (expression -> BOOLEAN .)
    CONJUNCTION     reduce using rule 23 (expression -> BOOLEAN .)
    DISJUNCTION     reduce using rule 23 (expression -> BOOLEAN .)
    EQUAL           reduce using rule 23 (expression -> BOOLEAN .)
    NEQUAL          reduce using rule 23 (expression -> BOOLEAN .)
    GTE             reduce using rule 23 (expression -> BOOLEAN .)
    GT              reduce using rule 23 (expression -> BOOLEAN .)
    LTE             reduce using rule 23 (expression -> BOOLEAN .)
    LT              reduce using rule 23 (expression -> BOOLEAN .)
    ASSIGN          reduce using rule 23 (expression -> BOOLEAN .)
    RPAREN          reduce using rule 23 (expression -> BOOLEAN .)
    COMMA           reduce using rule 23 (expression -> BOOLEAN .)
    LPAREN          reduce using rule 23 (expression -> BOOLEAN .)
    RBRACKET        reduce using rule 23 (expression -> BOOLEAN .)


state 16

    (24) expression -> NAME .

    SEMICOLON       reduce using rule 24 (expression -> NAME .)
    LBRACKET        reduce using rule 24 (expression -> NAME .)
    ADDITION        reduce using rule 24 (expression -> NAME .)
    SUBTRACTION     reduce using rule 24 (expression -> NAME .)
    MULTIPLICATION  reduce using rule 24 (expression -> NAME .)
    DIVISION        reduce using rule 24 (expression -> NAME .)
    EXPONENTIATION  reduce using rule 24 (expression -> NAME .)
    MODULUS         reduce using rule 24 (expression -> NAME .)
    INTDIVISION     reduce using rule 24 (expression -> NAME .)
    MEMBER          reduce using rule 24 (expression -> NAME .)
    CONS            reduce using rule 24 (expression -> NAME .)
    CONJUNCTION     reduce using rule 24 (expression -> NAME .)
    DISJUNCTION     reduce using rule 24 (expression -> NAME .)
    EQUAL           reduce using rule 24 (expression -> NAME .)
    NEQUAL          reduce using rule 24 (expression -> NAME .)
    GTE             reduce using rule 24 (expression -> NAME .)
    GT              reduce using rule 24 (expression -> NAME .)
    LTE             reduce using rule 24 (expression -> NAME .)
    LT              reduce using rule 24 (expression -> NAME .)
    ASSIGN          reduce using rule 24 (expression -> NAME .)
    RPAREN          reduce using rule 24 (expression -> NAME .)
    COMMA           reduce using rule 24 (expression -> NAME .)
    LPAREN          reduce using rule 24 (expression -> NAME .)
    RBRACKET        reduce using rule 24 (expression -> NAME .)


state 17

    (27) expression -> SUBTRACTION . expression
    (7) expression -> . PRINT LPAREN expression RPAREN
    (9) expression -> . INDEXTUPES expression LPAREN tuple RPAREN
    (10) expression -> . LPAREN tuple RPAREN
    (13) expression -> . expression LBRACKET expression RBRACKET
    (14) expression -> . LBRACKET list RBRACKET
    (20) expression -> . INT_VAL
    (21) expression -> . REAL_VAL
    (22) expression -> . STRING
    (23) expression -> . BOOLEAN
    (24) expression -> . NAME
    (25) expression -> . expression ADDITION expression
    (26) expression -> . expression SUBTRACTION expression
    (27) expression -> . SUBTRACTION expression
    (28) expression -> . expression MULTIPLICATION expression
    (29) expression -> . expression DIVISION expression
    (30) expression -> . expression EXPONENTIATION expression
    (31) expression -> . expression MODULUS expression
    (32) expression -> . expression INTDIVISION expression
    (33) expression -> . expression MEMBER expression
    (34) expression -> . expression CONS expression
    (35) expression -> . expression CONJUNCTION expression
    (36) expression -> . expression DISJUNCTION expression
    (37) expression -> . expression EQUAL expression
    (38) expression -> . expression NEQUAL expression
    (39) expression -> . expression GTE expression
    (40) expression -> . expression GT expression
    (41) expression -> . expression LTE expression
    (42) expression -> . expression LT expression
    (43) expression -> . NEGATION expression
    (44) expression -> . LPAREN expression RPAREN

    PRINT           shift and go to state 8
    INDEXTUPES      shift and go to state 10
    LPAREN          shift and go to state 9
    LBRACKET        shift and go to state 11
    INT_VAL         shift and go to state 12
    REAL_VAL        shift and go to state 13
    STRING          shift and go to state 14
    BOOLEAN         shift and go to state 15
    NAME            shift and go to state 16
    SUBTRACTION     shift and go to state 17
    NEGATION        shift and go to state 18

    expression                     shift and go to state 50

state 18

    (43) expression -> NEGATION . expression
    (7) expression -> . PRINT LPAREN expression RPAREN
    (9) expression -> . INDEXTUPES expression LPAREN tuple RPAREN
    (10) expression -> . LPAREN tuple RPAREN
    (13) expression -> . expression LBRACKET expression RBRACKET
    (14) expression -> . LBRACKET list RBRACKET
    (20) expression -> . INT_VAL
    (21) expression -> . REAL_VAL
    (22) expression -> . STRING
    (23) expression -> . BOOLEAN
    (24) expression -> . NAME
    (25) expression -> . expression ADDITION expression
    (26) expression -> . expression SUBTRACTION expression
    (27) expression -> . SUBTRACTION expression
    (28) expression -> . expression MULTIPLICATION expression
    (29) expression -> . expression DIVISION expression
    (30) expression -> . expression EXPONENTIATION expression
    (31) expression -> . expression MODULUS expression
    (32) expression -> . expression INTDIVISION expression
    (33) expression -> . expression MEMBER expression
    (34) expression -> . expression CONS expression
    (35) expression -> . expression CONJUNCTION expression
    (36) expression -> . expression DISJUNCTION expression
    (37) expression -> . expression EQUAL expression
    (38) expression -> . expression NEQUAL expression
    (39) expression -> . expression GTE expression
    (40) expression -> . expression GT expression
    (41) expression -> . expression LTE expression
    (42) expression -> . expression LT expression
    (43) expression -> . NEGATION expression
    (44) expression -> . LPAREN expression RPAREN

    PRINT           shift and go to state 8
    INDEXTUPES      shift and go to state 10
    LPAREN          shift and go to state 9
    LBRACKET        shift and go to state 11
    INT_VAL         shift and go to state 12
    REAL_VAL        shift and go to state 13
    STRING          shift and go to state 14
    BOOLEAN         shift and go to state 15
    NAME            shift and go to state 16
    SUBTRACTION     shift and go to state 17
    NEGATION        shift and go to state 18

    expression                     shift and go to state 51

state 19

    (2) statement-list -> LBRACE statement-list . RBRACE

    RBRACE          shift and go to state 52


state 20

    (3) statement-list -> statement statement-list .

    $end            reduce using rule 3 (statement-list -> statement statement-list .)
    RBRACE          reduce using rule 3 (statement-list -> statement statement-list .)


state 21

    (5) statement -> expression SEMICOLON .

    LBRACE          reduce using rule 5 (statement -> expression SEMICOLON .)
    PRINT           reduce using rule 5 (statement -> expression SEMICOLON .)
    INDEXTUPES      reduce using rule 5 (statement -> expression SEMICOLON .)
    LPAREN          reduce using rule 5 (statement -> expression SEMICOLON .)
    LBRACKET        reduce using rule 5 (statement -> expression SEMICOLON .)
    INT_VAL         reduce using rule 5 (statement -> expression SEMICOLON .)
    REAL_VAL        reduce using rule 5 (statement -> expression SEMICOLON .)
    STRING          reduce using rule 5 (statement -> expression SEMICOLON .)
    BOOLEAN         reduce using rule 5 (statement -> expression SEMICOLON .)
    NAME            reduce using rule 5 (statement -> expression SEMICOLON .)
    SUBTRACTION     reduce using rule 5 (statement -> expression SEMICOLON .)
    NEGATION        reduce using rule 5 (statement -> expression SEMICOLON .)
    $end            reduce using rule 5 (statement -> expression SEMICOLON .)
    RBRACE          reduce using rule 5 (statement -> expression SEMICOLON .)


state 22
